--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="quoteText">
                 <i class="bi bi-quote" style="float: left;"></i>
                 <hr>
-                <div class="quoteWritten">
+                <div class="quoteWritten" style="text-align: center;">
                     Wake up to reality! Nothing ever goes as planned in this world. The longer you live, the more you realize that in this reality, only pain, suffering, and futility exist.
                 </div>
                 <i class="bi bi-quote" style="float:right"></i>
